update dependencies versions, and change appliation's name